Fixed header alignment

--- a/src/Components/Question.css
+++ b/src/Components/Question.css
@@ -44,6 +44,18 @@
   font-weight: bold;
 }
 
+.header5 {
+  margin-left: 500px;
+  margin-top: 250px;
+  font-size: 62px;
+  font-weight: bold;
+}
+
+.align-center2 {
+  margin-left: 550px;
+  margin-top: 150px;
+}
+
 .genre {
   margin-left: 200px;
   margin-top: 100px;
